<resources>
    <string name="app_name" translatable="false">Control de Leche</string>
    <string name="navigation_drawer_open" translatable="false">Open navigation drawer</string>
    <string name="navigation_drawer_close" translatable="false">Close navigation drawer</string>
    <string name="nav_header_title" translatable="false">Control de Leche</string>
    <string name="nav_header_subtitle" translatable="false">Control_de_leche@android.com</string>
    <string name="nav_header_desc" translatable="false">Navigation header</string>
    <string name="action_settings" translatable="false">Ayuda</string>

    <string name="menu_home" translatable="false">Registro de Leche</string>
    <string name="menu_gallery" translatable="false">Control y Pago de Leche</string>
    <string name="menu_slideshow" translatable="false">Configuración</string>


    <string name="menu_leche_manana">Leche Mañana</string>
    <string name="menu_leche_tarde">Leche Tarde</string>


</resources>